--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -95,7 +95,7 @@ annots$Oki <- gff2txdb("../Annotations/OKI2018_I69.v2/OKI2018_I69.v2.gm.gff", OK
 annots$Osa <- gff2txdb("../Annotations/OSKA2016v1.9/OSKA2016v1.9.gm.gff",     OSKA2016v1.9)
 annots$Bar <- gff2txdb("../Annotations/Bar2_p4.Flye/Bar2_p4.Flye.gm.gff", Bar2_p4)
 annots$Kum <- gff2txdb("../Annotations/KUM-M3-7f/KUM-M3-7f.gm.gff", KUM_M3)
-# annots$Aom <- gff2txdb("../Annotations/AOM-5-5f/AOM-5-5f.gm.gff", NULL)
+annots$Aom <- gff2txdb("../Annotations/AOM-5-5f/AOM-5-5f.gm.gff", AOM_5)
 annots$Nor <- gff2txdb_Norway("../Annotations/OdB3/Oikopleura_annot_v1.0.gff", OdB3)
 ```
 
