Show examples of duplicated transcripts.

--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -150,6 +150,8 @@ flagOverlaps <- function(gr) {
   seq_along(gr) %in% idx
 }
 
+transcripts(annots$Bar)[flagOverlaps(transcripts(annots$Bar))]
+
 # Show examples
 gb[flagOverlaps(gb)]
 gb$query[flagOverlaps(gb$query)]
