Remove annotations as TxDb objects cannot be serialised.

--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -67,56 +67,6 @@ genomes <- SimpleList(
   Kum = KUM_M3, Aom = AOM_5, Nor = OdB3)
 ```
 
-Annotations
-===========
-
-The annotations from `/bucket/LuscombeU/common/Breakpoints/Annotations` are
-distributed in the same drat repository as the alignment data.
-
-```
-install.packages("BreakpointsData", repos="https://oist.github.io/plessy_oikgenomes_drat/")
-```
-
-```{r load_annotations}
-annots <- SimpleList()
-
-gff2txdb <- function(file, genome) {
-  tx <- rtracklayer::import.gff(file)
-  tx <- tx[seqnames(tx) %in% seqnames(genome)]
-  tx <- GRanges(tx, seqinfo = seqinfo(genome))
-  tx <- GenomicFeatures::makeTxDbFromGRanges(tx)
-}
-
-gff2txdb_Norway <- function(file, genome) {
-  tx <- rtracklayer::import.gff(file)
-  # Remove "scaffoldA" objects in the OdB3 annotation
-  tx <- tx[seqnames(tx) %in% seqnames(genome)]
-  tx$ID <- NA_character_
-  mcols(tx)[tx$type == "mRNA","ID"] <- paste0(tx[tx$type == "mRNA"]$mRNA, ".mRNA")
-  mcols(tx)[tx$type == "CDS","ID"] <- paste0(tx[tx$type == "CDS"]$CDS, ".CDS")
-  mcols(tx)[tx$type == "UTR","ID"] <- paste0(tx[tx$type == "UTR"]$UTR, ".UTR")
-  tx <- GRanges(tx, seqinfo = seqinfo(genome))
-  tx <- GenomicFeatures::makeTxDbFromGRanges(tx)
-}
-
-annots$Oki <- gff2txdb("../Annotations/OKI2018_I69.v2/OKI2018_I69.v2.gm.gff", OKI2018_I69)
-annots$Osa <- gff2txdb("../Annotations/OSKA2016v1.9/OSKA2016v1.9.gm.gff",     OSKA2016v1.9)
-annots$Bar <- gff2txdb("../Annotations/Bar2_p4.Flye/Bar2_p4.Flye.gm.gff", Bar2_p4)
-annots$Kum <- gff2txdb("../Annotations/KUM-M3-7f/KUM-M3-7f.gm.gff", KUM_M3)
-annots$Aom <- gff2txdb("../Annotations/AOM-5-5f/AOM-5-5f.gm.gff", AOM_5)
-annots$Nor <- gff2txdb_Norway("../Annotations/OdB3/Oikopleura_annot_v1.0.gff", OdB3)
-```
-
-Long and short arms
--------------------
-
-(in progress)
-
-```{r long_and_short_arms}
-# OKI_longShort <- rtracklayer::import.gff3(system.file("extdata/OKI2018_I69.arms.gff3", package = "GenomicBreaks"))
-# OKI_longShort <- GRanges(OKI_longShort, seqinfo = seqinfo(OKI2018_I69), strand = "*")
-```
-
 Genomic breaks
 ==============
 
@@ -196,8 +146,8 @@ Save data
 =========
 
 ```{r save_data}
-save(annots, gbs, coa, coa2, file = "BreakPoints.Rdata")
-system("echo 'f314eefba7f0a8124468cd88b0ea93cf  BreakPoints.Rdata' | md5sum -c", intern = TRUE)
+save(gbs, coa, coa2, file = "BreakPoints.Rdata")
+system("echo '4e6633c045a3d0ad56eb2061e8e27119  BreakPoints.Rdata' | md5sum -c", intern = TRUE)
 ```
 
 Session information
