Suggest how to install BSgenome packages instead of providing code that can be run by accident.

--- a/vignettes/GenomicBreaks_vignette.Rmd
+++ b/vignettes/GenomicBreaks_vignette.Rmd
@@ -40,21 +40,11 @@ suppressPackageStartupMessages({
 
 ### BSgenome packages
 
-The Oikopleura BSgenome packages are distributed in a drat directory hosted on GitHub
-((oist/plessy_oikgenomes_drat)[https://oist.github.io/plessy_oikgenomes_drat/]).
+Example command to install one _Oikopleura_ BSgenome package if you do not yet
+have it:
 
-To install them:
-
-```{r install_drat_BSgenome_packages, eval=FALSE}
-# Chromosome assemblies
+```
 install.packages("BSgenome.Odioica.local.OKI2018.I69", repos="https://oist.github.io/plessy_oikgenomes_drat/")
-install.packages("BSgenome.Odioica.local.OSKA2016v1.9", repos="https://oist.github.io/plessy_oikgenomes_drat/")
-install.packages("BSgenome.Odioica.local.Bar2.p4", repos="https://oist.github.io/plessy_oikgenomes_drat/")
-
-# Less contiguous genomes
-install.packages("BSgenome.Odioica.local.Odioica.reference.v3.0", repos="https://oist.github.io/plessy_oikgenomes_drat/")
-install.packages("BSgenome.Odioica.local.AOM.5", repos="https://oist.github.io/plessy_oikgenomes_drat/")
-install.packages("BSgenome.Odioica.local.KUM.M3", repos="https://oist.github.io/plessy_oikgenomes_drat/")
 ```
 
 Other BSgenome packages are distributed by Bioconductor
