--- a/vignettes/GenomicBreaks_vignette.Rmd
+++ b/vignettes/GenomicBreaks_vignette.Rmd
@@ -81,20 +81,35 @@ genomes <- SimpleList(
 
 ### Genome annotations.
 
-```{r load_genomic_features}
+
+```{r load_annotations}
 annots <- SimpleList()
 
 gff2txdb <- function(file, genome) {
-  tx <- rtracklayer::import.gff3(file)
+  tx <- rtracklayer::import.gff(file)
+  tx <- tx[seqnames(tx) %in% seqnames(genome)]
   tx <- GRanges(tx, seqinfo = seqinfo(genome))
   tx <- GenomicFeatures::makeTxDbFromGRanges(tx)
 }
 
-annots$Oki <- gff2txdb("Annotations/OKI2018_I69.v2/OKI2018_I69.v2.gm.gff", OKI2018_I69)
-annots$Kum <- gff2txdb("Annotations/KUM-M3-7f/KUM-M3-7f.gm.gff", KUM_M3)
-annots$Osa <- gff2txdb("Annotations/OSKA2016v1.9/OSKA2016v1.9.gm.gff",     OSKA2016v1.9)
-annots$Bar <- gff2txdb("Annotations/Bar2_p4.Flye/Bar2_p4.Flye.gm.gff", Bar2_p4)
-annots$Aom <- gff2txdb("Annotations/AOM-5-5f/AOM-5-5f.gm.gff", AOM_5)
+gff2txdb_Norway <- function(file, genome) {
+  tx <- rtracklayer::import.gff(file)
+  # Remove "scaffoldA" objects in the OdB3 annotation
+  tx <- tx[seqnames(tx) %in% seqnames(genome)]
+  tx$ID <- NA_character_
+  mcols(tx)[tx$type == "mRNA","ID"] <- paste0(tx[tx$type == "mRNA"]$mRNA, ".mRNA")
+  mcols(tx)[tx$type == "CDS","ID"] <- paste0(tx[tx$type == "CDS"]$CDS, ".CDS")
+  mcols(tx)[tx$type == "UTR","ID"] <- paste0(tx[tx$type == "UTR"]$UTR, ".UTR")
+  tx <- GRanges(tx, seqinfo = seqinfo(genome))
+  tx <- GenomicFeatures::makeTxDbFromGRanges(tx)
+}
+
+annots$Oki <- gff2txdb("../Annotations/OKI2018_I69.v2/OKI2018_I69.v2.gm.gff", OKI2018_I69)
+annots$Osa <- gff2txdb("../Annotations/OSKA2016v1.9/OSKA2016v1.9.gm.gff",     OSKA2016v1.9)
+annots$Bar <- gff2txdb("../Annotations/Bar2_p4.Flye/Bar2_p4.Flye.gm.gff", Bar2_p4)
+annots$Kum <- gff2txdb("../Annotations/KUM-M3-7f/KUM-M3-7f.gm.gff", KUM_M3)
+annots$Aom <- gff2txdb("../Annotations/AOM-5-5f/AOM-5-5f.gm.gff", AOM_5)
+annots$Nor <- gff2txdb_Norway("../Annotations/OdB3/Oikopleura_annot_v1.0.gff", OdB3)
 ```
 
 ### Long and short arms.
