--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -29,14 +29,14 @@ Similar objects are stored in lists to avoid cluttering the environment.
 Pacakges
 ========
 
-Core packages that provide functions we use a lot.
+Core packages that provide functions we use a lot
+-------------------------------------------------
 
 ```{r loadlib, echo=T, results='hide'}
-library('GenomicBreaks')
 suppressPackageStartupMessages({
+  library('GenomicBreaks')
   library('BSgenome')
   library('GenomicFeatures')
-  library('GenomicRanges')
   library('ggplot2')
 })
 ```
@@ -67,8 +67,46 @@ genomes <- SimpleList(
   Kum = KUM_M3, Aom = AOM_5, Nor = OdB3)
 ```
 
+
+Data packages
+-------------
+
+In the same repository: the _BreakpointsData_ package, that installs copies
+of the files found in _deigo_ under `/bucket/LuscombeU/common/Breakpoints`.
+
+```
+install.packages("BreakpointsData", repos="https://oist.github.io/plessy_oikgenomes_drat/")
+```
+
+The package itself does not contain any function but loading it will give its
+version in `sessionInfo()`.
+
+```{r load_BreakpointsData}
+library("BreakpointsData")
+```
+
 Genomic breaks
 ==============
+
+Long/short arm information
+--------------------------
+
+```{r long_and_short_arms}
+
+loadLongShort <- function(file, genome) {
+  file <- system.file(paste0("extdata/Annotations/", file), package = "BreakpointsData")
+  gr <- rtracklayer::import.gff3(file)
+  gr$source <- gr$type <- gr$score <- gr$phase <- NULL
+  GRanges(gr, seqinfo = seqinfo(genome), strand = "*")
+}
+
+longShort <- SimpleList()
+longShort$Oki <- loadLongShort("OKI2018_I69.v2/OKI2018_I69.arms.gff3", OKI2018_I69)
+longShort$Osa <- loadLongShort("OSKA2016v1.9/OSKA2016v1.9.arms.gff3", OSKA2016v1.9)
+longShort$Bar <- loadLongShort("Bar2_p4.Flye/Bar2_p4.Flye.arms.gff3", Bar2_p4)
+
+longShort
+```
 
 Mapped alignments
 -----------------
@@ -77,32 +115,46 @@ Let's load data from genome alignments, copied in the `Oidioi_pairwise_v3`
 directory.
 
 ```{r GRanges object}
-gbs <- SimpleList()
-load_genomic_breaks_ <- function(file, genomeT, genomeQ, longShort=NULL) {
-  file <- system.file(paste0("extdata/", file), package = "BreakpointsData")
-  gb <- load_genomic_breaks(file, genomeT,  genomeQ)
-  if (! is.null(longShort))
-    gb$Type <- mcols(longShort)[findOverlaps(gb, longShort) |> subjectHits(), "Type"]
+# Local function to add extra annotation on long/short arms
+longShortAnnotate <- function(gb, longShort) {
+  # Setting a minimum overlap to solve problem with gbs$Bar_Kum[2383] that matches two arms.
+  # In any case, this approach is too fragile...
+  overlapHits <- findOverlaps(gb, longShort, minoverlap = 10) |> subjectHits()
+  gb$Arm <- longShort[overlapHits]$Type
   gb
 }
 
-gbs$Oki_Osa <- load_genomic_breaks_("Oidioi_pairwise_v3/OKI2018_I69_1.0__OSKA2016v1.9.gff.gz", OKI2018_I69,  OSKA2016v1.9)
-gbs$Oki_Bar <- load_genomic_breaks_("Oidioi_pairwise_v3/OKI2018_I69_1.0__Bar2_p4.gff.gz",      OKI2018_I69,  Bar2_p4)
-gbs$Oki_Kum <- load_genomic_breaks_("Oidioi_pairwise_v3/OKI2018_I69_1.0__KUM-M3-7f.gff.gz",    OKI2018_I69,  KUM_M3)
-gbs$Oki_Aom <- load_genomic_breaks_("Oidioi_pairwise_v3/OKI2018_I69_1.0__AOM-5-5f.gff.gz",     OKI2018_I69,  AOM_5)
-gbs$Oki_Nor <- load_genomic_breaks_("Oidioi_pairwise_v3/OKI2018_I69_1.0__OdB3.gff.gz",         OKI2018_I69,  OdB3)
+# Local function to add extra annotation on long/short arms while loading data
+load_genomic_breaks_ <- function(file, genomeT, genomeQ, longShort=NULL) {
+  file <- system.file(paste0("extdata/Oidioi_pairwise_v3/", file), package = "BreakpointsData")
+  gb <- load_genomic_breaks(file, genomeT,  genomeQ)
+  if (! is.null(longShort)) {
+    gb <- subsetByOverlaps(gb, longShort)
+    gb <- longShortAnnotate(gb, longShort)
+  }
+  gb
+}
 
-gbs$Osa_Oki <- load_genomic_breaks_("Oidioi_pairwise_v3/OSKA2016v1.9__OKI2018_I69_1.0.gff.gz", OSKA2016v1.9, OKI2018_I69)
-gbs$Osa_Bar <- load_genomic_breaks_("Oidioi_pairwise_v3/OSKA2016v1.9__Bar2_p4.gff.gz",         OSKA2016v1.9, Bar2_p4)
-gbs$Osa_Kum <- load_genomic_breaks_("Oidioi_pairwise_v3/OSKA2016v1.9__KUM-M3-7f.gff.gz",       OSKA2016v1.9, KUM_M3)
-gbs$Osa_Aom <- load_genomic_breaks_("Oidioi_pairwise_v3/OSKA2016v1.9__AOM-5-5f.gff.gz",        OSKA2016v1.9, AOM_5)
-gbs$Osa_Nor <- load_genomic_breaks_("Oidioi_pairwise_v3/OSKA2016v1.9__OdB3.gff.gz",            OSKA2016v1.9, OdB3)
 
-gbs$Bar_Oki <- load_genomic_breaks_("Oidioi_pairwise_v3/Bar2_p4__OKI2018_I69_1.0.gff.gz",      Bar2_p4,     OKI2018_I69)
-gbs$Bar_Osa <- load_genomic_breaks_("Oidioi_pairwise_v3/Bar2_p4__OSKA2016v1.9.gff.gz",         Bar2_p4,     OSKA2016v1.9)
-gbs$Bar_Kum <- load_genomic_breaks_("Oidioi_pairwise_v3/Bar2_p4__KUM-M3-7f.gff.gz",            Bar2_p4,     KUM_M3)
-gbs$Bar_Aom <- load_genomic_breaks_("Oidioi_pairwise_v3/Bar2_p4__AOM-5-5f.gff.gz",             Bar2_p4,     AOM_5)
-gbs$Bar_Nor <- load_genomic_breaks_("Oidioi_pairwise_v3/Bar2_p4__OdB3.gff.gz",                 Bar2_p4,     OdB3)
+gbs <- SimpleList()
+
+gbs$Oki_Osa <- load_genomic_breaks_("OKI2018_I69_1.0__OSKA2016v1.9.gff.gz", OKI2018_I69,  OSKA2016v1.9, longShort$Oki)
+gbs$Oki_Bar <- load_genomic_breaks_("OKI2018_I69_1.0__Bar2_p4.gff.gz",      OKI2018_I69,  Bar2_p4,      longShort$Oki)
+gbs$Oki_Kum <- load_genomic_breaks_("OKI2018_I69_1.0__KUM-M3-7f.gff.gz",    OKI2018_I69,  KUM_M3,       longShort$Oki)
+gbs$Oki_Aom <- load_genomic_breaks_("OKI2018_I69_1.0__AOM-5-5f.gff.gz",     OKI2018_I69,  AOM_5,        longShort$Oki)
+gbs$Oki_Nor <- load_genomic_breaks_("OKI2018_I69_1.0__OdB3.gff.gz",         OKI2018_I69,  OdB3,         longShort$Oki)
+
+gbs$Osa_Oki <- load_genomic_breaks_("OSKA2016v1.9__OKI2018_I69_1.0.gff.gz", OSKA2016v1.9, OKI2018_I69,  longShort$Osa)
+gbs$Osa_Bar <- load_genomic_breaks_("OSKA2016v1.9__Bar2_p4.gff.gz",         OSKA2016v1.9, Bar2_p4,      longShort$Osa)
+gbs$Osa_Kum <- load_genomic_breaks_("OSKA2016v1.9__KUM-M3-7f.gff.gz",       OSKA2016v1.9, KUM_M3,       longShort$Osa)
+gbs$Osa_Aom <- load_genomic_breaks_("OSKA2016v1.9__AOM-5-5f.gff.gz",        OSKA2016v1.9, AOM_5,        longShort$Osa)
+gbs$Osa_Nor <- load_genomic_breaks_("OSKA2016v1.9__OdB3.gff.gz",            OSKA2016v1.9, OdB3,         longShort$Osa)
+
+gbs$Bar_Oki <- load_genomic_breaks_("Bar2_p4__OKI2018_I69_1.0.gff.gz",      Bar2_p4,     OKI2018_I69,   longShort$Bar)
+gbs$Bar_Osa <- load_genomic_breaks_("Bar2_p4__OSKA2016v1.9.gff.gz",         Bar2_p4,     OSKA2016v1.9,  longShort$Bar)
+gbs$Bar_Kum <- load_genomic_breaks_("Bar2_p4__KUM-M3-7f.gff.gz",            Bar2_p4,     KUM_M3,        longShort$Bar)
+gbs$Bar_Aom <- load_genomic_breaks_("Bar2_p4__AOM-5-5f.gff.gz",             Bar2_p4,     AOM_5,         longShort$Bar)
+gbs$Bar_Nor <- load_genomic_breaks_("Bar2_p4__OdB3.gff.gz",                 Bar2_p4,     OdB3,          longShort$Bar)
 ```
 
 Coalescing alignments
@@ -110,8 +162,9 @@ Coalescing alignments
 
 ```{r coalescing algorithm}
 coa <- sapply(gbs, coalesce_contigs) |> SimpleList()
-sapply(gbs, length)
-sapply(coa, length)
+coa[ 1:5]  <- sapply(coa[ 1:5],  longShortAnnotate, longShort$Oki)
+coa[ 6:10] <- sapply(coa[ 6:10], longShortAnnotate, longShort$Osa)
+coa[11:15] <- sapply(coa[11:15], longShortAnnotate, longShort$Bar)
 ```
 
 Coalesce again
@@ -121,6 +174,18 @@ See the Genomic Breaks vignette for justification.
 
 ```{r re_coalesce}
 coa2 <- sapply(coa, coalesce_contigs, minwidth = 500) |> SimpleList()
+coa2[ 1:5]  <- sapply(coa2[ 1:5],  longShortAnnotate, longShort$Oki)
+coa2[ 6:10] <- sapply(coa2[ 6:10], longShortAnnotate, longShort$Osa)
+coa2[11:15] <- sapply(coa2[11:15], longShortAnnotate, longShort$Bar)
+```
+
+Numbers of blocks
+-----------------
+
+```{r lengths}
+sapply(gbs,  length)
+sapply(coa,  length)
+sapply(coa2, length)
 ```
 
 Summary
