--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -91,6 +91,9 @@ Genomic breaks
 Long/short arm information
 --------------------------
 
+Short / long arm annotation will be done by the `GenomicBreaks::flagLongShort()`
+function.
+
 ```{r long_and_short_arms}
 
 loadLongShort <- function(file, genome) {
@@ -111,30 +114,19 @@ longShort
 Mapped alignments
 -----------------
 
-Let's load data from genome alignments, copied in the `Oidioi_pairwise_v3`
-directory.
+Let's load data from genome alignments, using the copy distributed in the
+`BreakpointsData` package.
 
 ```{r GRanges object}
-# Local function to add extra annotation on long/short arms
-longShortAnnotate <- function(gb, longShort) {
-  # Setting a minimum overlap to solve problem with gbs$Bar_Kum[2383] that matches two arms.
-  # In any case, this approach is too fragile...
-  overlapHits <- findOverlaps(gb, longShort, minoverlap = 10) |> subjectHits()
-  gb$Arm <- longShort[overlapHits]$Type
-  gb
-}
-
 # Local function to add extra annotation on long/short arms while loading data
 load_genomic_breaks_ <- function(file, genomeT, genomeQ, longShort=NULL) {
   file <- system.file(paste0("extdata/Oidioi_pairwise_v3/", file), package = "BreakpointsData")
   gb <- load_genomic_breaks(file, genomeT,  genomeQ)
   if (! is.null(longShort)) {
-    gb <- subsetByOverlaps(gb, longShort)
-    gb <- longShortAnnotate(gb, longShort)
+    gb <-  flagLongShort(gb, longShort)
   }
   gb
 }
-
 
 gbs <- SimpleList()
 
@@ -162,9 +154,9 @@ Coalescing alignments
 
 ```{r coalescing algorithm}
 coa <- sapply(gbs, coalesce_contigs) |> SimpleList()
-coa[ 1:5]  <- sapply(coa[ 1:5],  longShortAnnotate, longShort$Oki)
-coa[ 6:10] <- sapply(coa[ 6:10], longShortAnnotate, longShort$Osa)
-coa[11:15] <- sapply(coa[11:15], longShortAnnotate, longShort$Bar)
+coa[ 1:5]  <- sapply(coa[ 1:5],  flagLongShort, longShort$Oki)
+coa[ 6:10] <- sapply(coa[ 6:10], flagLongShort, longShort$Osa)
+coa[11:15] <- sapply(coa[11:15], flagLongShort, longShort$Bar)
 ```
 
 Coalesce again
@@ -174,9 +166,9 @@ See the Genomic Breaks vignette for justification.
 
 ```{r re_coalesce}
 coa2 <- sapply(coa, coalesce_contigs, minwidth = 500) |> SimpleList()
-coa2[ 1:5]  <- sapply(coa2[ 1:5],  longShortAnnotate, longShort$Oki)
-coa2[ 6:10] <- sapply(coa2[ 6:10], longShortAnnotate, longShort$Osa)
-coa2[11:15] <- sapply(coa2[11:15], longShortAnnotate, longShort$Bar)
+coa2[ 1:5]  <- sapply(coa2[ 1:5],  flagLongShort, longShort$Oki)
+coa2[ 6:10] <- sapply(coa2[ 6:10], flagLongShort, longShort$Osa)
+coa2[11:15] <- sapply(coa2[11:15], flagLongShort, longShort$Bar)
 ```
 
 Numbers of blocks
@@ -211,8 +203,8 @@ Save data
 =========
 
 ```{r save_data}
-save(gbs, coa, coa2, file = "BreakPoints.Rdata")
-system("echo '4e6633c045a3d0ad56eb2061e8e27119  BreakPoints.Rdata' | md5sum -c", intern = TRUE)
+save(gbs, coa, coa2, longShort, file = "BreakPoints.Rdata")
+system("echo 'ff7b48683717a8ba1b03ad2917323ffc  BreakPoints.Rdata' | md5sum -c", intern = TRUE)
 ```
 
 Session information
