--- a/vignettes/GenomicBreaks_vignette.Rmd
+++ b/vignettes/GenomicBreaks_vignette.Rmd
@@ -82,11 +82,18 @@ genomes <- SimpleList(
 
 ### Genome annotations.
 
+The annotations from `/bucket/LuscombeU/common/Breakpoints/Annotations` are
+distributed in the same drat repository as the alignment data.
+
+```
+install.packages("BreakpointsData", repos="https://oist.github.io/plessy_oikgenomes_drat/")
+```
 
 ```{r load_annotations}
 annots <- SimpleList()
 
 gff2txdb <- function(file, genome) {
+  file <- system.file(paste0("extdata/Annotations/", file), package = "BreakpointsData")
   tx <- rtracklayer::import.gff(file)
   tx <- tx[seqnames(tx) %in% seqnames(genome)]
   tx <- GRanges(tx, seqinfo = seqinfo(genome))
@@ -94,6 +101,7 @@ gff2txdb <- function(file, genome) {
 }
 
 gff2txdb_Norway <- function(file, genome) {
+  file <- system.file(paste0("extdata/Annotations/", file), package = "BreakpointsData")
   tx <- rtracklayer::import.gff(file)
   # Remove "scaffoldA" objects in the OdB3 annotation
   tx <- tx[seqnames(tx) %in% seqnames(genome)]
@@ -105,12 +113,12 @@ gff2txdb_Norway <- function(file, genome) {
   tx <- GenomicFeatures::makeTxDbFromGRanges(tx)
 }
 
-annots$Oki <- gff2txdb("../Annotations/OKI2018_I69.v2/OKI2018_I69.v2.gm.gff", OKI2018_I69)
-annots$Osa <- gff2txdb("../Annotations/OSKA2016v1.9/OSKA2016v1.9.gm.gff",     OSKA2016v1.9)
-annots$Bar <- gff2txdb("../Annotations/Bar2_p4.Flye/Bar2_p4.Flye.gm.gff", Bar2_p4)
-annots$Kum <- gff2txdb("../Annotations/KUM-M3-7f/KUM-M3-7f.gm.gff", KUM_M3)
-annots$Aom <- gff2txdb("../Annotations/AOM-5-5f/AOM-5-5f.gm.gff", AOM_5)
-annots$Nor <- gff2txdb_Norway("../Annotations/OdB3/Oikopleura_annot_v1.0.gff", OdB3)
+annots$Oki <- gff2txdb("OKI2018_I69.v2/OKI2018_I69.v2.gm.gff.gz",  OKI2018_I69)
+annots$Osa <- gff2txdb("OSKA2016v1.9/OSKA2016v1.9.gm.gff.gz",      OSKA2016v1.9)
+annots$Bar <- gff2txdb("Bar2_p4.Flye/Bar2_p4.Flye.gm.gff.gz",      Bar2_p4)
+annots$Kum <- gff2txdb("KUM-M3-7f/KUM-M3-7f.gm.gff.gz",            KUM_M3)
+annots$Aom <- gff2txdb("AOM-5-5f/AOM-5-5f.gm.gff.gz",              AOM_5)
+annots$Nor <- gff2txdb_Norway("OdB3/Oikopleura_annot_v1.0.gff.gz", OdB3)
 ```
 
 ### GenomicBreaks object
