Correct vignette title.

--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -3,7 +3,7 @@ title: "Orthogroup syntenies"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEncoding{UTF-8}
-  %\VignetteIndexEntry{GenomicBreaks}
+  %\VignetteIndexEntry{Orthogroup syntenies}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
   chunk_output_type: console
