--- a/vignettes/GenomicBreaks_vignette.Rmd
+++ b/vignettes/GenomicBreaks_vignette.Rmd
@@ -621,31 +621,32 @@ plotTracks(list(gen, trk))
 ### Detection
 
 ```{r detect_trivial_insertions}
-sapply(gbs, function(gb) sum(flagInsersions(coalesce_contigs(gb))$ins))
-
-y <- flagInsersions(reduced_gr_Oki_O)
-
-#r <- 63:70
-r <- 23:30
-#r <- 316:319
-options(ucscChromosomeNames=FALSE)
-gen <- GenomeAxisTrack(name="OKI2018_I69")
-ide <- IdeogramTrack(chromosome = seqlevelsInUse(x[r]), genome = "OKI2018_I69", bands = seqinfo2gieStain(OKI2018_I69))
-trk <- AnnotationTrack(x[r], name = "OKI2018_I69", id=LETTERS[seq_along(r)])
-p1 <- grid::grid.grabExpr(plotTracks(list(ide, gen, trk), featureAnnotation = "id"))
-
-gen2 <- GenomeAxisTrack(name="OSKA2016")
-ide2 <- IdeogramTrack(chromosome = seqlevelsInUse(x$query[r])[1], genome = "OSKA2016", bands = seqinfo2gieStain(OSKA2016))
-trk2 <- AnnotationTrack(x[r]$query, name = "OSKA2016", id=LETTERS[seq_along(r)])
-p2 <- grid::grid.grabExpr(plotTracks(list(ide2,gen2,trk2), featureAnnotation = "id"))
+sapply(gbs, function(gb)  sum(flagInsersions(gb)$ins))
+sapply(coa, function(gb)  sum(flagInsersions(gb)$ins))
+sapply(coa2, function(gb) sum(flagInsersions(gb)$ins))
 
 
-gen3 <- GenomeAxisTrack(name="OSKA2016")
-ide3 <- IdeogramTrack(chromosome = seqlevelsInUse(x$query[r])[2], genome = "OSKA2016", bands = seqinfo2gieStain(OSKA2016))
-trk3 <- AnnotationTrack(x[r]$query, name = "OSKA2016", id=LETTERS[seq_along(r)])
-p3 <- grid::grid.grabExpr(plotTracks(list(ide3,gen3,trk3), featureAnnotation = "id"))
-
-gridExtra::grid.arrange(p1, p2, p3, nrow=3)
+# #r <- 63:70
+# r <- 23:30
+# #r <- 316:319
+# options(ucscChromosomeNames=FALSE)
+# gen <- GenomeAxisTrack(name="OKI2018_I69")
+# ide <- IdeogramTrack(chromosome = seqlevelsInUse(x[r]), genome = "OKI2018_I69", bands = seqinfo2gieStain(OKI2018_I69))
+# trk <- AnnotationTrack(x[r], name = "OKI2018_I69", id=LETTERS[seq_along(r)])
+# p1 <- grid::grid.grabExpr(plotTracks(list(ide, gen, trk), featureAnnotation = "id"))
+# 
+# gen2 <- GenomeAxisTrack(name="OSKA2016")
+# ide2 <- IdeogramTrack(chromosome = seqlevelsInUse(x$query[r])[1], genome = "OSKA2016", bands = seqinfo2gieStain(OSKA2016))
+# trk2 <- AnnotationTrack(x[r]$query, name = "OSKA2016", id=LETTERS[seq_along(r)])
+# p2 <- grid::grid.grabExpr(plotTracks(list(ide2,gen2,trk2), featureAnnotation = "id"))
+# 
+# 
+# gen3 <- GenomeAxisTrack(name="OSKA2016")
+# ide3 <- IdeogramTrack(chromosome = seqlevelsInUse(x$query[r])[2], genome = "OSKA2016", bands = seqinfo2gieStain(OSKA2016))
+# trk3 <- AnnotationTrack(x[r]$query, name = "OSKA2016", id=LETTERS[seq_along(r)])
+# p3 <- grid::grid.grabExpr(plotTracks(list(ide3,gen3,trk3), featureAnnotation = "id"))
+# 
+# gridExtra::grid.arrange(p1, p2, p3, nrow=3)
 ```
 
 ## Tandem repeats
