Load data providing the longShort object

--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -197,6 +197,7 @@ Gene Order Conservation is smaller in short arms
 ------------------------------------------------
 
 ```{r GOC}
+load("BreakPoints.Rdata")
 gb <- flagLongShort(gb, longShort$Bar)
 gb <- gb[!is.na(gb$Arm)]
 gbl <- split(gb, paste(seqnames(gb), gb$Arm))
