--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -9,6 +9,11 @@ editor_options:
   chunk_output_type: console
 ---
 
+```{r setup}
+knitr::opts_chunk$set(cache = TRUE)
+knitr::opts_knit$set(verbose = TRUE)
+```
+
 Load packages and data
 ======================
 
