--- a/vignettes/GenomicBreaks_vignette.Rmd
+++ b/vignettes/GenomicBreaks_vignette.Rmd
@@ -14,7 +14,7 @@ editor_options:
 ---
 
 ```{r setup}
-knitr::opts_chunk$set(cache = TRUE)
+knitr::opts_chunk$set(cache = TRUE, cache.lazy = FALSE)
 knitr::opts_knit$set(verbose = TRUE)
 ```
 
@@ -555,6 +555,10 @@ sapply(coa2, function(gb) sum(flagInversions(gb)$inv))
 Enrichement for motifs is being searched in
 `vignette("Motif finding and analysis")`
 
+```{r load_PWMs}
+gadems.invLeftGap <- readRDS("gadems.invLeftGap.Rda")
+```
+
 ### Representation of some inversions
 
 ```{r}
@@ -654,36 +658,36 @@ sapply(coa2, function(gb) sum(flagInsersions(gb)$ins))
 Repeated regions of genomes are notoriously difficult to assemble and align. Thus, information about an alignment stop's proximity to a tandem repeat is useful information in breakpoint classification. Given a user-defined tolerance, the function `tan_bp` will classify alignment stops as either far from, close to, or within tandem repeats (elements 1,2 and 3 of the produced list, respectively). The function requires the tandem repeat coverage of one of the genomes. By default, the function will expect the target genome tandem coverage. Setting `query_tf = TRUE` will switch the outcome to be query genome oriented.
 
 ```{r echo=T, message=F, warning=F}
-
-tan_O <- rtracklayer::import.gff3(system.file("extdata/OSKA2016.tantanf4w100.gff3.gz",  package="GenomicBreaks"))
-tan_O <- GRanges(tan_O, seqinfo = seqinfo(OSKA2016))
-tan_gr_O <- tan_bp(gr_ob = gr_O_Oki, tan = tan_O, tol = 50)
-tan_gr_O
-
-tan_Oki <- rtracklayer::import.gff3(system.file("extdata/I69-5.tantanf4w100.gff3.gz",  package="GenomicBreaks"))
-tan_Oki <- GRanges(tan_Oki, seqinfo = seqinfo(OKI2018_I69))
-tan_gr_Oki <- tan_bp(gr_ob = gr_O_Oki, tan = tan_Oki, tol = 50, query_tf = TRUE)
-tan_gr_Oki
+# 
+# tan_O <- rtracklayer::import.gff3(system.file("extdata/OSKA2016.tantanf4w100.gff3.gz",  package="GenomicBreaks"))
+# tan_O <- GRanges(tan_O, seqinfo = seqinfo(OSKA2016))
+# tan_gr_O <- tan_bp(gr_ob = gr_O_Oki, tan = tan_O, tol = 50)
+# tan_gr_O
+# 
+# tan_Oki <- rtracklayer::import.gff3(system.file("extdata/I69-5.tantanf4w100.gff3.gz",  package="GenomicBreaks"))
+# tan_Oki <- GRanges(tan_Oki, seqinfo = seqinfo(OKI2018_I69))
+# tan_gr_Oki <- tan_bp(gr_ob = gr_O_Oki, tan = tan_Oki, tol = 50, query_tf = TRUE)
+# tan_gr_Oki
 
 ```
 
 We can use another script to plot the density of tandem repeats around alignment stops (and breakpoints). In the following plots, breakpoints are aligned at the centre of the plots. Intuitively, this function can be generalised to see the density of any binary coverage characteristic around breakpoints, given a GRanges object with per-base coverage of a given characteristic. Here we stick with tandem repeat info:
 
 ```{r echo=T, message=F, warning=F}
-hm_tan_O <- gr_O_Oki %>%
-  feature_coverage(tan_O, win = 1000, lab = "Osaka ~ Okinawa", direction = "left") %>%
-  smoothHeatmap(output.size = c(2000,500), algorithm = "kernel") %T>%
-  plotHeatmap
-
-hm_red_tan_O <- reduced_gr_O_Oki %>%
-  feature_coverage(tan_O, win = 1000, lab = "Osaka ~ Okinawa", direction = "left") %>%
-  smoothHeatmap(output.size = c(2000,500), algorithm = "kernel") %T>%
-  plotHeatmap
-
-hm_tan_Oki <- gr_Oki_O %>%
-  feature_coverage(tan_Oki, win = 1000, lab = "Osaka ~ Okinawa", direction = "left") %>%
-  smoothHeatmap(output.size = c(2000,500), algorithm = "kernel") %T>%
-  plotHeatmapList
+# hm_tan_O <- gr_O_Oki %>%
+#   feature_coverage(tan_O, win = 1000, lab = "Osaka ~ Okinawa", direction = "left") %>%
+#   smoothHeatmap(output.size = c(2000,500), algorithm = "kernel") %T>%
+#   plotHeatmap
+# 
+# hm_red_tan_O <- reduced_gr_O_Oki %>%
+#   feature_coverage(tan_O, win = 1000, lab = "Osaka ~ Okinawa", direction = "left") %>%
+#   smoothHeatmap(output.size = c(2000,500), algorithm = "kernel") %T>%
+#   plotHeatmap
+# 
+# hm_tan_Oki <- gr_Oki_O %>%
+#   feature_coverage(tan_Oki, win = 1000, lab = "Osaka ~ Okinawa", direction = "left") %>%
+#   smoothHeatmap(output.size = c(2000,500), algorithm = "kernel") %T>%
+#   plotHeatmapList
 ```
 ## Coverage
 
@@ -710,27 +714,30 @@ The function `master_bp_analysis` brings together the information about tandem r
 ```
 
 
-# Examples
+# Nucleaic acid content heatmaps
 
-## Nucleaic acid content heatmaps
-
-The _GenomicBreaks_ function `bp_heatmap` plots nucleic acid content in windows
-centrered on alignment stops.  Lets look at `GC` content before and after
+The `GenomicBreaks::bp_heatmap()` function plots nucleic acid content in windows
+centered on alignment stops.  Lets look at `GC` content before and after
 coalescing: 
 
-```{r echo=T, message=F, warning=F}
+```{r echo=T, fig.height=6, fig.width=12, message=FALSE, warning=FALSE}
 library(heatmaps)
-hm_GC1 <- sapply(gbs, bp_heatmap, basep_range = 1000, pat = "GC", direction = "left") |> SimpleList()
-hm_GC2 <- sapply(coa, bp_heatmap, basep_range = 1000, pat = "GC", direction = "left") |> SimpleList()
+#hm_GC1 <- sapply(gbs,  bp_heatmap, basep_range = 1000, pat = "GC", direction = "left") |> SimpleList()
+hm_GC2 <- sapply(coa,  bp_heatmap, basep_range = 1000, pat = "GC", direction = "left") |> SimpleList()
+#hm_GC3 <- sapply(coa2, bp_heatmap, basep_range = 1000, pat = "GC", direction = "left") |> SimpleList()
 
 maxHeight <- 2000
-sm_GC1 <- sapply(hm_GC1, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
+#sm_GC1 <- sapply(hm_GC1, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
 sm_GC2 <- sapply(hm_GC2, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
-sm_GC3 <- sapply(hm_GC3, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
+#sm_GC3 <- sapply(hm_GC3, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
 
-plotHeatmapList(sm_GC1)
-plotHeatmapList(sm_GC2)
-plotHeatmapList(sm_GC3)
+#plotHeatmapList(sm_GC1[1:5])
+
+plotHeatmapList(sm_GC2[1:5])
+#plotHeatmapList(sm_GC2[6:10])
+#plotHeatmapList(sm_GC2[11:15])
+
+#plotHeatmapList(sm_GC3[1:5])
 ```
 
 The alignment stops are ordered in such a way that start (or left breaks) are
@@ -741,18 +748,18 @@ aligned region.
 
 Now looking at TATA content:
 
-```{r TATA}
-hm_GC1_TATA <- sapply(gbs, bp_heatmap, basep_range = 1000, pat = "TATA", direction = "left") |> SimpleList()
+```{r TATA, fig.height=6, fig.width=12}
+#hm_GC1_TATA <- sapply(gbs, bp_heatmap, basep_range = 1000, pat = "TATA", direction = "left") |> SimpleList()
 hm_GC2_TATA <- sapply(coa, bp_heatmap, basep_range = 1000, pat = "TATA", direction = "left") |> SimpleList()
 
 maxHeight <- 2000
-sm_GC1_TATA <- sapply(hm_GC1_TATA, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
+#sm_GC1_TATA <- sapply(hm_GC1_TATA, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
 sm_GC2_TATA <- sapply(hm_GC2_TATA, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
-sm_GC3_TATA <- sapply(hm_GC3_TATA, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
+#sm_GC3_TATA <- sapply(hm_GC3_TATA, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
 
-plotHeatmapList(sm_GC1_TATA)
-plotHeatmapList(sm_GC2_TATA)
-plotHeatmapList(sm_GC3_TATA)
+#plotHeatmapList(sm_GC1_TATA)
+plotHeatmapList(sm_GC2_TATA[1:5])
+#plotHeatmapList(sm_GC3_TATA)
 ```
 
 The directionaility here is consistent with the `GC` content analysis.
@@ -766,18 +773,18 @@ for TATA boxes, so it does not necessarily show that breakpoints are occurring
 directly after promoter regions. 
 
 
-```{r AAGCsGCwwmkCGrCTTyn}
-hm_GC1_mot <- sapply(gbs, bp_heatmap, basep_range = 1000, pat = "AGCNGC", direction = "left") |> SimpleList()
+```{r AAGCsGCwwmkCGrCTTyn, fig.height=6, fig.width=12}
+#hm_GC1_mot <- sapply(gbs, bp_heatmap, basep_range = 1000, pat = "AGCNGC", direction = "left") |> SimpleList()
 hm_GC2_mot <- sapply(coa, bp_heatmap, basep_range = 1000, pat = "AGCNGC", direction = "left") |> SimpleList()
 
 maxHeight <- 2000
-sm_GC1_mot <- sapply(hm_GC1_mot, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
+#sm_GC1_mot <- sapply(hm_GC1_mot, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
 sm_GC2_mot <- sapply(hm_GC2_mot, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
-sm_GC3_mot <- sapply(hm_GC3_mot, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
+#sm_GC3_mot <- sapply(hm_GC3_mot, smoothHeatmap, output.size = c(maxHeight,     500), algorithm = "kernel") |> SimpleList()
 
-plotHeatmapList(sm_GC1_mot)
-plotHeatmapList(sm_GC2_mot)
-plotHeatmapList(sm_GC3_mot)
+#plotHeatmapList(sm_GC1_mot)
+plotHeatmapList(sm_GC2_mot[1:5])
+#plotHeatmapList(sm_GC3_mot)
 ```
 
 
@@ -785,69 +792,69 @@ plotHeatmapList(sm_GC3_mot)
 
 
 ```{r cluster_analysis, fig.height=20, fig.width=20}
-# Accessory functions
-clusterHeatmap <- function(hm, k = 2) kmeans(image(hm), k)
-
-orderHeatmap <- function(hm, cl) {
-  image(hm) <- image(hm)[order(cl$cluster),]
-  hm
-}
-
-subsetHeatmap <- function(hm, bool) {
-  image(hm) <- image(hm)[bool,]
-  hm
-}
-
-# DAta
-hm_GC   <- bp_heatmap(      gr_Oki_O, basep_range  = 1000, pat = "GC",     direction = "left")
-hm_TATA <- bp_heatmap(      gr_Oki_O, basep_range  = 1000, pat = "TATA",   direction = "left")
-hm_tan  <- feature_coverage(gr_Oki_O, tan_Oki, win = 1000, lab = "Tandem", direction = "left")
-
-# Define 3 K-mean clusters
-clusterHeatmap(hm_GC, 3) -> hm_cl_k4
-
-# Order and smooth
-shm_GC <- orderHeatmap(hm_GC, hm_cl_k4) %>%
-  smoothHeatmap(output.size = c(2000,500), algorithm = "kernel")
-
-shm_TATA <- orderHeatmap(hm_TATA, hm_cl_k4) %>%
-  smoothHeatmap(output.size = c(2000,500), algorithm = "kernel")
-
-shm_tan <- orderHeatmap(hm_tan, hm_cl_k4) %>%
-  smoothHeatmap(output.size = c(2000,500), algorithm = "kernel")
-
-# Plot the ordered data
-plotHeatmapList(list(shm_GC, shm_TATA, shm_tan))
-par(mfrow = c(1,1)) # plotHeatmapList messes with mrfrow...
-plotHeatmapMeta(list(hm_GC, hm_TATA, hm_tan))
-
-plotHeatmapMeta(list(subsetHeatmap(hm_GC, hm_cl_k4$cluster == 1),
-                     subsetHeatmap(hm_GC, hm_cl_k4$cluster == 2),
-                     subsetHeatmap(hm_GC, hm_cl_k4$cluster == 3)))
-
-kmeanOrderedPlot <- function (hm, k=3, seed = 1) {
-  set.seed(seed)
-  
-  cl <- kmeans(image(hm), k)
-  mat <- image(hm)[order(cl$cluster),]
-  
-  kmhm = Heatmap(
-    mat,
-    coords=c(-500,500),
-    label="kmeans",
-    scale=range(mat))
-  
-  plotHeatmapList(kmhm,
-                  cex.label=1.5,
-                  partition=as.vector(table(cl$cluster)),
-                  partition.legend=TRUE,
-                  partition.lines=TRUE,
-                  legend=TRUE,
-                  legend.pos="r",
-                  legend.width=0.3)
-}
-
-kmeanOrderedPlot(shm_GC)
+# # Accessory functions
+# clusterHeatmap <- function(hm, k = 2) kmeans(image(hm), k)
+# 
+# orderHeatmap <- function(hm, cl) {
+#   image(hm) <- image(hm)[order(cl$cluster),]
+#   hm
+# }
+# 
+# subsetHeatmap <- function(hm, bool) {
+#   image(hm) <- image(hm)[bool,]
+#   hm
+# }
+# 
+# # DAta
+# hm_GC   <- bp_heatmap(      gr_Oki_O, basep_range  = 1000, pat = "GC",     direction = "left")
+# hm_TATA <- bp_heatmap(      gr_Oki_O, basep_range  = 1000, pat = "TATA",   direction = "left")
+# hm_tan  <- feature_coverage(gr_Oki_O, tan_Oki, win = 1000, lab = "Tandem", direction = "left")
+# 
+# # Define 3 K-mean clusters
+# clusterHeatmap(hm_GC, 3) -> hm_cl_k4
+# 
+# # Order and smooth
+# shm_GC <- orderHeatmap(hm_GC, hm_cl_k4) %>%
+#   smoothHeatmap(output.size = c(2000,500), algorithm = "kernel")
+# 
+# shm_TATA <- orderHeatmap(hm_TATA, hm_cl_k4) %>%
+#   smoothHeatmap(output.size = c(2000,500), algorithm = "kernel")
+# 
+# shm_tan <- orderHeatmap(hm_tan, hm_cl_k4) %>%
+#   smoothHeatmap(output.size = c(2000,500), algorithm = "kernel")
+# 
+# # Plot the ordered data
+# plotHeatmapList(list(shm_GC, shm_TATA, shm_tan))
+# par(mfrow = c(1,1)) # plotHeatmapList messes with mrfrow...
+# plotHeatmapMeta(list(hm_GC, hm_TATA, hm_tan))
+# 
+# plotHeatmapMeta(list(subsetHeatmap(hm_GC, hm_cl_k4$cluster == 1),
+#                      subsetHeatmap(hm_GC, hm_cl_k4$cluster == 2),
+#                      subsetHeatmap(hm_GC, hm_cl_k4$cluster == 3)))
+# 
+# kmeanOrderedPlot <- function (hm, k=3, seed = 1) {
+#   set.seed(seed)
+#   
+#   cl <- kmeans(image(hm), k)
+#   mat <- image(hm)[order(cl$cluster),]
+#   
+#   kmhm = Heatmap(
+#     mat,
+#     coords=c(-500,500),
+#     label="kmeans",
+#     scale=range(mat))
+#   
+#   plotHeatmapList(kmhm,
+#                   cex.label=1.5,
+#                   partition=as.vector(table(cl$cluster)),
+#                   partition.legend=TRUE,
+#                   partition.lines=TRUE,
+#                   legend=TRUE,
+#                   legend.pos="r",
+#                   legend.width=0.3)
+# }
+# 
+# kmeanOrderedPlot(shm_GC)
 ```
 
 ## Evidence for breakpoint hotspots
@@ -881,14 +888,14 @@ The function `feature_coverage` will plot the coverage of tandem repeats around
 centred alignment stops. 
 
 ```{r echo=T, message=F, warning=F}
-
-hm_tan1 <- feature_coverage(gr_ob = gr_O_Oki, feat = tan_O, win = 4000, lab = "Osk ~ Oki", direction = "left")
-plotHeatmapMeta(hm_tan1)
- 
-hm_tan2 <- feature_coverage(gr_ob = reduced_gr_O_Oki, feat = tan_O, win = 4000, lab = "OSK~Oki (coalesced)", direction = "left")
-plotHeatmapMeta(hm_tan2)
-
-# should I also add comparison of proportions of tandem proximities before and after coalescion?
+# 
+# hm_tan1 <- feature_coverage(gr_ob = gr_O_Oki, feat = tan_O, win = 4000, lab = "Osk ~ Oki", direction = "left")
+# plotHeatmapMeta(hm_tan1)
+#  
+# hm_tan2 <- feature_coverage(gr_ob = reduced_gr_O_Oki, feat = tan_O, win = 4000, lab = "OSK~Oki (coalesced)", direction = "left")
+# plotHeatmapMeta(hm_tan2)
+# 
+# # should I also add comparison of proportions of tandem proximities before and after coalescion?
 ```
 
 There appears to be less tandem repeats around alignment stops after coalescion,
@@ -898,22 +905,29 @@ tandem repeats.
 
 ## Gene feature coverage around alignment stops (breakpoints)
 
+TODO: analyse separately the breakpoint regions that are in colinear regions?
+
 The function `feature_coverage` will plot the coverage of tandem repeats around
 centred alignment stops. 
 
 ```{r genomic_features}
 #current_GB <- gr_Oki_O # To ease recomputing with another object
-current_GB <- reduced_gr_Oki_O
+current_GB <- gbs$Oki_Osa
+#current_GB <- coa$Oki_Osa
+pwm <- gadems.invLeftGap$Oki_Osa[[1]]
+pwm@consensus
+pwmHits <- matchPWM(pwm = rGADEM::getPWM(pwm), genomes$Oki)
+
 hmList_OKI <- list()
 
-hmList_OKI$genes      <- feature_coverage(current_GB, genes(tx_OKI),                         win = 2000, lab = "Oki genes", direction = "left")
-hmList_OKI$promoters  <- feature_coverage(current_GB, promoters(tx_OKI),                     win = 2000, lab = "Oki promoters", direction = "left")
-hmList_OKI$exons      <- feature_coverage(current_GB, exonicParts(tx_OKI),                   win = 2000, lab = "Oki exons", direction = "left")
-hmList_OKI$introns    <- feature_coverage(current_GB, intronicParts(tx_OKI),                 win = 2000, lab = "Oki introns", direction = "left")
-hmList_OKI$cds        <- feature_coverage(current_GB, cds(tx_OKI),                           win = 2000, lab = "Oki cds", direction = "left")
-hmList_OKI$utrs5      <- feature_coverage(current_GB, unlist(fiveUTRsByTranscript(tx_OKI)),  win = 2000, lab = "Oki 5′ UTRs", direction = "left")
-hmList_OKI$utrs3      <- feature_coverage(current_GB, unlist(threeUTRsByTranscript(tx_OKI)), win = 2000, lab = "Oki 3′ UTRs", direction = "left")
-hmList_OKI$pwm        <- feature_coverage(current_GB, pwmHits                              , win = 2000, lab = "PWM", direction = "left")
+hmList_OKI$genes      <- feature_coverage(current_GB, genes(annots$Oki),                         win = 2000, lab = "Oki genes", direction = "left")
+hmList_OKI$promoters  <- feature_coverage(current_GB, promoters(annots$Oki),                     win = 2000, lab = "Oki promoters", direction = "left")
+hmList_OKI$exons      <- feature_coverage(current_GB, exonicParts(annots$Oki),                   win = 2000, lab = "Oki exons", direction = "left")
+hmList_OKI$introns    <- feature_coverage(current_GB, intronicParts(annots$Oki),                 win = 2000, lab = "Oki introns", direction = "left")
+hmList_OKI$cds        <- feature_coverage(current_GB, cds(annots$Oki),                           win = 2000, lab = "Oki cds", direction = "left")
+hmList_OKI$utrs5      <- feature_coverage(current_GB, unlist(fiveUTRsByTranscript(annots$Oki)),  win = 2000, lab = "Oki 5′ UTRs", direction = "left")
+hmList_OKI$utrs3      <- feature_coverage(current_GB, unlist(threeUTRsByTranscript(annots$Oki)), win = 2000, lab = "Oki 3′ UTRs", direction = "left")
+hmList_OKI$pwm        <- feature_coverage(current_GB, pwmHits                                  , win = 2000, lab = "PWM", direction = "left")
 
 plotHeatmapMeta(hmList_OKI)
 plotHeatmapMeta(hmList_OKI$genes)
@@ -935,13 +949,13 @@ Let's look at coverage around PWM hits of the AAGCsGCwwmkCGrCTTyn motif
 current_GB <- pwmHits
 
 hmList_PWM_OKI <- list()
-hmList_PWM_OKI$genes     <- feature_coverage(current_GB, genes(tx_OKI),                         win = 2000, lab = "Oki genes", direction = "left")
-hmList_PWM_OKI$promoters <- feature_coverage(current_GB, promoters(tx_OKI),                     win = 2000, lab = "Oki promoters", direction = "left")
-hmList_PWM_OKI$exons     <- feature_coverage(current_GB, exonicParts(tx_OKI),                   win = 2000, lab = "Oki exons", direction = "left")
-hmList_PWM_OKI$introns   <- feature_coverage(current_GB, intronicParts(tx_OKI),                 win = 2000, lab = "Oki introns", direction = "left")
-hmList_PWM_OKI$cds       <- feature_coverage(current_GB, cds(tx_OKI),                           win = 2000, lab = "Oki cds", direction = "left")
-hmList_PWM_OKI$utrs5     <- feature_coverage(current_GB, unlist(fiveUTRsByTranscript(tx_OKI)),  win = 2000, lab = "Oki 5′ UTRs", direction = "left")
-hmList_PWM_OKI$utrs3     <- feature_coverage(current_GB, unlist(threeUTRsByTranscript(tx_OKI)), win = 2000, lab = "Oki 3′ UTRs", direction = "left")
+hmList_PWM_OKI$genes     <- feature_coverage(current_GB, genes(annots$Oki),                         win = 2000, lab = "Oki genes", direction = "left")
+hmList_PWM_OKI$promoters <- feature_coverage(current_GB, promoters(annots$Oki),                     win = 2000, lab = "Oki promoters", direction = "left")
+hmList_PWM_OKI$exons     <- feature_coverage(current_GB, exonicParts(annots$Oki),                   win = 2000, lab = "Oki exons", direction = "left")
+hmList_PWM_OKI$introns   <- feature_coverage(current_GB, intronicParts(annots$Oki),                 win = 2000, lab = "Oki introns", direction = "left")
+hmList_PWM_OKI$cds       <- feature_coverage(current_GB, cds(annots$Oki),                           win = 2000, lab = "Oki cds", direction = "left")
+hmList_PWM_OKI$utrs5     <- feature_coverage(current_GB, unlist(fiveUTRsByTranscript(annots$Oki)),  win = 2000, lab = "Oki 5′ UTRs", direction = "left")
+hmList_PWM_OKI$utrs3     <- feature_coverage(current_GB, unlist(threeUTRsByTranscript(annots$Oki)), win = 2000, lab = "Oki 3′ UTRs", direction = "left")
 
 plotHeatmapMeta(hmList_PWM_OKI)
 plotHeatmapMeta(hmList_PWM_OKI[c("exons", "introns")])
@@ -952,17 +966,17 @@ plotHeatmapMeta(hmList_PWM_OKI[c("utrs5", "utrs3")])
 They are enriched in introns...
 
 ```{r genomic_features3}
-
-# Sandbox to make sanity checks.
-
-a <- reduced_gr_Oki_O
-b <- unlist(fiveUTRsByTranscript(tx_OKI))
-
-hm_a <- feature_coverage(a, b, win = 2000, lab = "All ranges", direction = "left")
-hm_b <- feature_coverage(subsetByOverlaps(a,  b), b, win = 2000, lab = "Subsetted ranges", direction = "left")
-
-plotHeatmapMeta(list(hm_a))
-plotHeatmapMeta(list(hm_b))
+# 
+# # Sandbox to make sanity checks.
+# 
+# a <- coa$Oki_Osa
+# b <- unlist(fiveUTRsByTranscript(annots$Oki))
+# 
+# hm_a <- feature_coverage(a, b, win = 2000, lab = "All ranges", direction = "left")
+# hm_b <- feature_coverage(subsetByOverlaps(a,  b), b, win = 2000, lab = "Subsetted ranges", direction = "left")
+# 
+# plotHeatmapMeta(list(hm_a))
+# plotHeatmapMeta(list(hm_b))
 ```
 
 
