--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -73,7 +73,7 @@ distributed in the same drat repository as the alignment data.
 install.packages("BreakpointsData", repos="https://oist.github.io/plessy_oikgenomes_drat/")
 ```
 
-```{r load_annotations}
+```{r load_annotations, warning=FALSE}
 annots <- SimpleList()
 
 gff2txdb <- function(file, genome) {
